2010-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] For rcsedit.c, use es->foo directly.

	* rcsedit.c (EDIT): Delete macro.
	(insertline): Use ‘es->foo’ instead of ‘EDIT (foo)’.
	(deletelines, snapshotedit_fast, finishedit_fast, swapeditfiles)
	(finishedit_slow, snapshotedit_slow, copylines, copystring)
	(enterstring, editstring): Likewise.

2010-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Tighten ‘finishedit_fast’.

	* rcsedit.c (finisheditline): Take ‘struct expctx *’.
	(finishedit_fast): Create expansion context, pass to ‘finisheditline’.

2010-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct assoc’ with ‘struct wlink’ + ‘struct symdef’.

	Here, "U" means "Update to use ‘struct wlink’ + ‘struct symdef’".
	* base.h (struct assoc): Delete.
	(struct symdef): New.
	(struct repository): Use ‘struct wlink’ for ‘admin.assocs’.
	* rcs.c (doassoc): U.
	* rcsedit.c (addsymbol): U.
	* rcsgen.c (putadmin): U.
	* rcsrev.c: #include "b-esds.h".
	(rev_from_symbol): U.
	(lookupsym): Use ‘rev_from_symbol’.
	* rcssyn.c (getadmin): U.
	* rlog.c (main): U.

2010-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct link’ instead of ‘struct access’.

	Here, "U" means "Update to use ‘struct link’".
	* base.h (struct access): Delete.
	(struct repository): Use ‘struct link’ for ‘admin.allowed’.
	* rcs.c: #include "b-esds.h".
	(doaccess, main): U.
	* rcsedit.c: #include "b-esds.h".
	(checkaccesslist): U.
	* rcsgen.c: #include "b-esds.h".
	(putadmin): U.
	* rcssyn.c: #include "b-esds.h".
	(getadmin): U.
	* rlog.c: #include "b-esds.h".
	(main): U.

2010-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: STR_DIFF, STR_SAME

	* base.h (STR_DIFF, STR_SAME): New macros.
	* ci.c (removelock, addbranch, main): Use one or both of them.
	* co.c (rmlock): Likewise.
	* rcs.c (rmnewlocklst, doaccess, breaklock, doassoc)
	(rcs_setstate, main): Likewise.
	* rcsclean.c (unlock): Likewise.